assets/stylesheets/responsive/custom.scss
/* ... */
.icon_attention_requested,
.icon_not_held,
.icon_waiting_response_very_overdue,
.icon_failed,
.icon_rejected {
  color: $status-failure;
}

.icon_successful,
.icon_partially_successful {
  color: $status-success;
}

/* Attachments*/

.view_html_prefix {
  font-family: $font-family;
  background-color: $banner-bg;
  color: transparentize($main_menu-link_text, 0.2);
  @include ie8 {
    color: $main_menu-link_text;
  }
  a {
    color: $main_menu-link_text;
  }
  .view_html_logo, .view_html_description {
    padding-top: 1em;
  }
}

/* User page */
#user_photo_on_profile {
  img, #set_photo {
    margin-top:0.5em;
  }
}

/* Help pages */

dt {
  color: $heading-color;
  font-weight: 700;
  @include respond-min( $main_menu-mobile_menu_cutoff ){
    font-size: 2em;
    line-height: 1.1em;
  }
}

/* Front page */
/* Drop the extract indentation on small screens */
#frontpage_examples .excerpt {
    padding: 0.2em 0 0 0;
    @include respond-min( $main_menu-mobile_menu_cutoff ){
      padding: 0 0 0 2em;
    }
}

